--- a/partial/book-list.html
+++ b/partial/book-list.html
@@ -22,7 +22,7 @@
                         <li>Released: {{book.releaseDate}}</li>
                     </ul>
                     <p>{{book.details}}</p>
-                    <button class="btn btn-info pull-right" ng-click="addToCart(book)">Add to Kart</button>
+                    <button class="btn btn-info pull-right" ng-click="addToCart(book)">Add to Cart</button>
                 </div>
             </li>
         </ul>
