--- a/partial/book-list.html
+++ b/partial/book-list.html
@@ -1,30 +1,28 @@
-
-<div id="bookListWrapper" ng-controller="BookListCtrl">
+<div id="bookListWrapper">
     <form role="form">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search here...">
+            <input type="text" class="form-control" placeholder="Search here..."
+                   ng-model="searchStr">
         </div>
     </form>
-    <div>
-        <ul class="list-unstyled">
-            <li class="book"
-                style="background: white url(imgs/{{book.imgUrl}}) no-repeat"
-                ng-repeat="book in books">
-                <!-- <ng-repeat> The ng-repeat directive repeats a set of HTML, a given number of times.
+    <ul class="list-unstyled">
+        <li class="book" ng-repeat="book in books | filter:searchStr"
+            style="background: white url('imgs/{{book.imgUrl}}') no-repeat">
+            <!-- <ng-repeat> The ng-repeat directive repeats a set of HTML, a given number of times.
                      books object inside the $scope is moved to book object -->
-                <div class="book-details clearfix">
-                    <h3>{{book.name}}</h3>
-                    <p>{{book.price}}</p>
-                    <ul class="list-unstyled list-inline">
-                        <li>Rating: {{book.rating}}</li>
-                        <li>Binding: {{book.binding}}</li>
-                        <li>Publisher: {{book.publisher}}</li>
-                        <li>Released: {{book.releaseDate}}</li>
-                    </ul>
-                    <p>{{book.details}}</p>
-                    <button class="btn btn-info pull-right" ng-click="addToCart(book)">Add to Cart</button>
-                </div>
-            </li>
-        </ul>
-    </div>
+            <div class="book-details clearfix">
+                <h3>{{book.name}}</h3>
+                <!-- use filter | to format -->
+                <p>{{book.price | currency:'Rs.'}}</p>
+                <ul class="list-unstyled list-inline">
+                    <li>Rating: {{book.rating}}</li>
+                    <li>Binding: {{book.binding | uppercase}}</li>
+                    <li>Publisher: {{book.publisher}}</li>
+                    <li>Released: {{book.releaseDate}}</li>
+                </ul>
+                <p>{{book.details}}</p>
+                <button class="btn btn-info pull-right" ng-click="addToCart(book)">Add to Cart</button>
+            </div>
+        </li>
+    </ul>
 </div>
