--- a/partial/kart-list.html
+++ b/partial/kart-list.html
@@ -8,7 +8,7 @@
                 <p>{{book.price}}</p>
                 <ul class="list-unstyled list-inline">
                     <li>Rating: {{book.rating}}</li>
-                    <li>Binding: {{book.binding}}</li>
+                    <li>Binding: {{book.binding | uppercase}}</li>
                     <li>Publisher: {{book.publisher}}</li>
                     <li>Released: {{book.releaseDate}}</li>
                 </ul>
